--- a/downloads.css
+++ b/downloads.css
@@ -26,7 +26,7 @@
     flex-direction: column; /* מציב את האלמנטים בעמודה אחת */
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
   }
   
   h1 {
